--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "Converts np.reddit.com links to regular reddit links.",
   "main": "index.js",
-  "author": "Ryan Haack",
-  "license": "GPLv2"
+  "author": "haackr",
+  "license": "GPLv2",
+  "icon": "icon48.png"
 }
