--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   "icons": {
     "128": "icon128.png",
     "64": "icon64.png",
-    "48": "icon48.png",
+    "48": "icon.png",
     "32": "icon32.png",
     "16": "icon16.png"
   }
