--- a/manifest.json
+++ b/manifest.json
@@ -16,10 +16,10 @@
   ],
 
   "icons": {
-    "128": "icon128.png",
-    "64": "icon64.png",
-    "48": "icon.png",
-    "32": "icon32.png",
-    "16": "icon16.png"
+    "128": "./icons/icon128.png",
+    "64": "./icons/icon64.png",
+    "48": "./icons/icon.png",
+    "32": "./icons/icon32.png",
+    "16": "./icons/icon16.png"
   }
 }
